updated swagger.py file
